- updated with fair comparison

--- a/main_pipeline_loss.ipynb
+++ b/main_pipeline_loss.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,123 +59,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "['Fall0', 'Fall1', 'Fall10', 'Fall100', 'Fall101', 'Fall102', 'Fall103', 'Fall104', 'Fall105', 'Fall106', 'Fall107', 'Fall108', 'Fall109', 'Fall11', 'Fall110', 'Fall111', 'Fall112', 'Fall113', 'Fall114', 'Fall115', 'Fall116', 'Fall117', 'Fall118', 'Fall119', 'Fall12', 'Fall120', 'Fall121', 'Fall122', 'Fall123', 'Fall124', 'Fall125', 'Fall126', 'Fall127', 'Fall128', 'Fall129', 'Fall13', 'Fall130', 'Fall131', 'Fall132', 'Fall133', 'Fall134', 'Fall135', 'Fall136', 'Fall137', 'Fall138', 'Fall139', 'Fall14', 'Fall15', 'Fall150', 'Fall151', 'Fall152', 'Fall153', 'Fall154', 'Fall155', 'Fall156', 'Fall157', 'Fall158', 'Fall159', 'Fall16', 'Fall160', 'Fall161', 'Fall162', 'Fall163', 'Fall164', 'Fall165', 'Fall166', 'Fall167', 'Fall168', 'Fall169', 'Fall17', 'Fall170', 'Fall171', 'Fall172', 'Fall173', 'Fall174', 'Fall175', 'Fall176', 'Fall177', 'Fall178', 'Fall179', 'Fall18', 'Fall180', 'Fall181', 'Fall182', 'Fall183', 'Fall184', 'Fall185', 'Fall186', 'Fall187', 'Fall188', 'Fall189', 'Fall19', 'Fall190', 'Fall191', 'Fall192', 'Fall193', 'Fall194', 'Fall195', 'Fall196', 'Fall197', 'Fall198', 'Fall199', 'Fall2', 'Fall20', 'Fall200', 'Fall201', 'Fall202', 'Fall203', 'Fall204', 'Fall205', 'Fall206', 'Fall207', 'Fall208', 'Fall209', 'Fall210', 'Fall211', 'Fall212', 'Fall213', 'Fall214', 'Fall215', 'Fall216', 'Fall217', 'Fall218', 'Fall219', 'Fall23', 'Fall230', 'Fall231', 'Fall232', 'Fall233', 'Fall234', 'Fall235', 'Fall236', 'Fall237', 'Fall238', 'Fall239', 'Fall24', 'Fall25', 'Fall26', 'Fall260', 'Fall261', 'Fall262', 'Fall263', 'Fall264', 'Fall265', 'Fall266', 'Fall267', 'Fall268', 'Fall269', 'Fall27', 'Fall270', 'Fall271', 'Fall272', 'Fall273', 'Fall274', 'Fall275', 'Fall276', 'Fall277', 'Fall278', 'Fall279', 'Fall28', 'Fall280', 'Fall281', 'Fall282', 'Fall283', 'Fall284', 'Fall285', 'Fall286', 'Fall287', 'Fall288', 'Fall289', 'Fall29', 'Fall290', 'Fall291', 'Fall292', 'Fall293', 'Fall294', 'Fall295', 'Fall296', 'Fall297', 'Fall298', 'Fall299', 'Fall3', 'Fall30', 'Fall31', 'Fall32', 'Fall33', 'Fall34', 'Fall35', 'Fall36', 'Fall37', 'Fall38', 'Fall39', 'Fall4', 'Fall40', 'Fall41', 'Fall42', 'Fall43', 'Fall44', 'Fall45', 'Fall46', 'Fall47', 'Fall48', 'Fall49', 'Fall5', 'Fall50', 'Fall51', 'Fall52', 'Fall53', 'Fall54', 'Fall55', 'Fall56', 'Fall57', 'Fall58', 'Fall59', 'Fall6', 'Fall60', 'Fall61', 'Fall62', 'Fall63', 'Fall64', 'Fall65', 'Fall66', 'Fall67', 'Fall68', 'Fall69', 'Fall7', 'Fall70', 'Fall71', 'Fall72', 'Fall73', 'Fall74', 'Fall75', 'Fall76', 'Fall77', 'Fall78', 'Fall79', 'Fall8', 'Fall80', 'Fall81', 'Fall82', 'Fall83', 'Fall84', 'Fall85', 'Fall86', 'Fall87', 'Fall88', 'Fall89', 'Fall9', 'Fall90', 'Fall91', 'Fall92', 'Fall93', 'Fall94', 'Fall95', 'Fall96', 'Fall97', 'Fall98', 'Fall99']\n",
-      "['NonFall0', 'NonFall1', 'NonFall10', 'NonFall11', 'NonFall12', 'NonFall13', 'NonFall14', 'NonFall15', 'NonFall16', 'NonFall17', 'NonFall18', 'NonFall19', 'NonFall2', 'NonFall20', 'NonFall21', 'NonFall22', 'NonFall23', 'NonFall24', 'NonFall25', 'NonFall26', 'NonFall27', 'NonFall28', 'NonFall29', 'NonFall3', 'NonFall30', 'NonFall31', 'NonFall32', 'NonFall33', 'NonFall34', 'NonFall35', 'NonFall36', 'NonFall37', 'NonFall38', 'NonFall39', 'NonFall4', 'NonFall40', 'NonFall41', 'NonFall42', 'NonFall43', 'NonFall44', 'NonFall45', 'NonFall46', 'NonFall47', 'NonFall48', 'NonFall49', 'NonFall5', 'NonFall50', 'NonFall51', 'NonFall52', 'NonFall53', 'NonFall54', 'NonFall55', 'NonFall56', 'NonFall57', 'NonFall58', 'NonFall59', 'NonFall6', 'NonFall60', 'NonFall61', 'NonFall62', 'NonFall63', 'NonFall64', 'NonFall65', 'NonFall66', 'NonFall67', 'NonFall68', 'NonFall69', 'NonFall7', 'NonFall70', 'NonFall71', 'NonFall72', 'NonFall73', 'NonFall74', 'NonFall75', 'NonFall76', 'NonFall77', 'NonFall78', 'NonFall79', 'NonFall8', 'NonFall80', 'NonFall81', 'NonFall82', 'NonFall83', 'NonFall84', 'NonFall85', 'NonFall86', 'NonFall87', 'NonFall88', 'NonFall89', 'NonFall9']\n",
-      "Skipped Fall102\n",
-      "Skipped Fall106\n",
-      "Skipped Fall108\n",
-      "Skipped Fall110\n",
-      "Skipped Fall129\n",
-      "Skipped Fall131\n",
-      "Skipped Fall150\n",
-      "Skipped Fall151\n",
-      "Skipped Fall152\n",
-      "Skipped Fall153\n",
-      "Skipped Fall156\n",
-      "Skipped Fall157\n",
-      "Skipped Fall158\n",
-      "Skipped Fall159\n",
-      "Skipped Fall167\n",
-      "Skipped Fall170\n",
-      "Skipped Fall171\n",
-      "Skipped Fall182\n",
-      "Skipped Fall187\n",
-      "Skipped Fall188\n",
-      "Skipped Fall20\n",
-      "Skipped Fall211\n",
-      "Skipped Fall213\n",
-      "Skipped Fall214\n",
-      "Skipped Fall23\n",
-      "Skipped Fall230\n",
-      "Skipped Fall231\n",
-      "Skipped Fall232\n",
-      "Skipped Fall233\n",
-      "Skipped Fall234\n",
-      "Skipped Fall235\n",
-      "Skipped Fall236\n",
-      "Skipped Fall237\n",
-      "Skipped Fall238\n",
-      "Skipped Fall239\n",
-      "Skipped Fall25\n",
-      "Skipped Fall26\n",
-      "Skipped Fall264\n",
-      "Skipped Fall267\n",
-      "Skipped Fall28\n",
-      "Skipped Fall29\n",
-      "Skipped Fall290\n",
-      "Skipped Fall291\n",
-      "Skipped Fall292\n",
-      "Skipped Fall293\n",
-      "Skipped Fall294\n",
-      "Skipped Fall295\n",
-      "Skipped Fall296\n",
-      "Skipped Fall297\n",
-      "Skipped Fall298\n",
-      "Skipped Fall299\n",
-      "Skipped Fall34\n",
-      "Skipped Fall37\n",
-      "Skipped Fall40\n",
-      "Skipped Fall41\n",
-      "Skipped Fall42\n",
-      "Skipped Fall43\n",
-      "Skipped Fall44\n",
-      "Skipped Fall45\n",
-      "Skipped Fall46\n",
-      "Skipped Fall47\n",
-      "Skipped Fall48\n",
-      "Skipped Fall49\n",
-      "Skipped Fall61\n",
-      "Skipped Fall67\n",
-      "Skipped Fall72\n",
-      "Skipped Fall74\n",
-      "Skipped Fall87\n",
-      "Skipped Fall91\n",
-      "Skipped Fall95\n",
-      "Skipped Fall98\n",
-      "Skipped Fall99\n",
-      "Skipped Fall99\n",
-      "Skipped Fall99\n",
-      "Skipped Fall99\n",
-      "Skipped Fall99\n",
-      "Skipped Fall99\n",
-      "Skipped Fall99\n",
-      "Skipped Fall99\n",
-      "Skipped Fall99\n",
-      "Skipped Fall99\n",
-      "Skipped Fall99\n",
-      "Skipped Fall99\n",
-      "Skipped Fall99\n",
-      "Skipped Fall99\n",
-      "Skipped Fall99\n",
-      "Skipped Fall99\n",
-      "Skipped Fall99\n",
-      "Skipped Fall99\n",
-      "Skipped Fall99\n",
-      "Skipped Fall99\n",
-      "Skipped Fall99\n",
-      "Skipped Fall99\n",
-      "Skipped Fall99\n",
-      "Skipped Fall99\n",
-      "Skipped Fall99\n",
-      "187\n",
-      "187\n",
-      "64\n",
-      "64\n",
-      "['NonFall0', 'NonFall1', 'NonFall10', 'NonFall11', 'NonFall12', 'NonFall13', 'NonFall14', 'NonFall15', 'NonFall16', 'NonFall17', 'NonFall18', 'NonFall19', 'NonFall2', 'NonFall24', 'NonFall27', 'NonFall3', 'NonFall30', 'NonFall31', 'NonFall32', 'NonFall33', 'NonFall35', 'NonFall36', 'NonFall38', 'NonFall39', 'NonFall4', 'NonFall5', 'NonFall50', 'NonFall51', 'NonFall52', 'NonFall53', 'NonFall54', 'NonFall55', 'NonFall56', 'NonFall57', 'NonFall58', 'NonFall59', 'NonFall6', 'NonFall60', 'NonFall62', 'NonFall63', 'NonFall64', 'NonFall66', 'NonFall68', 'NonFall69', 'NonFall7', 'NonFall70', 'NonFall71', 'NonFall73', 'NonFall75', 'NonFall76', 'NonFall77', 'NonFall78', 'NonFall79', 'NonFall8', 'NonFall80', 'NonFall81', 'NonFall82', 'NonFall83', 'NonFall84', 'NonFall85', 'NonFall86', 'NonFall88', 'NonFall89', 'NonFall9']\n",
-      "['Fall0', 'Fall1', 'Fall10', 'Fall100', 'Fall101', 'Fall103', 'Fall104', 'Fall105', 'Fall107', 'Fall109', 'Fall11', 'Fall111', 'Fall112', 'Fall113', 'Fall114', 'Fall115', 'Fall116', 'Fall117', 'Fall118', 'Fall119', 'Fall12', 'Fall120', 'Fall121', 'Fall122', 'Fall123', 'Fall124', 'Fall125', 'Fall126', 'Fall127', 'Fall128', 'Fall13', 'Fall130', 'Fall132', 'Fall133', 'Fall134', 'Fall135', 'Fall136', 'Fall137', 'Fall138', 'Fall139', 'Fall14', 'Fall15', 'Fall154', 'Fall155', 'Fall16', 'Fall160', 'Fall161', 'Fall162', 'Fall163', 'Fall164', 'Fall165', 'Fall166', 'Fall168', 'Fall169', 'Fall17', 'Fall172', 'Fall173', 'Fall174', 'Fall175', 'Fall176', 'Fall177', 'Fall178', 'Fall179', 'Fall18', 'Fall180', 'Fall181', 'Fall183', 'Fall184', 'Fall185', 'Fall186', 'Fall189', 'Fall19', 'Fall190', 'Fall191', 'Fall192', 'Fall193', 'Fall194', 'Fall195', 'Fall196', 'Fall197', 'Fall198', 'Fall199', 'Fall2', 'Fall200', 'Fall201', 'Fall202', 'Fall203', 'Fall204', 'Fall205', 'Fall206', 'Fall207', 'Fall208', 'Fall209', 'Fall210', 'Fall212', 'Fall215', 'Fall216', 'Fall217', 'Fall218', 'Fall219', 'Fall24', 'Fall260', 'Fall261', 'Fall262', 'Fall263', 'Fall265', 'Fall266', 'Fall268', 'Fall269', 'Fall27', 'Fall270', 'Fall271', 'Fall272', 'Fall273', 'Fall274', 'Fall275', 'Fall276', 'Fall277', 'Fall278', 'Fall279', 'Fall280', 'Fall281', 'Fall282', 'Fall283', 'Fall284', 'Fall285', 'Fall286', 'Fall287', 'Fall288', 'Fall289', 'Fall3', 'Fall30', 'Fall31', 'Fall32', 'Fall33', 'Fall35', 'Fall36', 'Fall38', 'Fall39', 'Fall4', 'Fall5', 'Fall50', 'Fall51', 'Fall52', 'Fall53', 'Fall54', 'Fall55', 'Fall56', 'Fall57', 'Fall58', 'Fall59', 'Fall6', 'Fall60', 'Fall62', 'Fall63', 'Fall64', 'Fall65', 'Fall66', 'Fall68', 'Fall69', 'Fall7', 'Fall70', 'Fall71', 'Fall73', 'Fall75', 'Fall76', 'Fall77', 'Fall78', 'Fall79', 'Fall8', 'Fall80', 'Fall81', 'Fall82', 'Fall83', 'Fall84', 'Fall85', 'Fall86', 'Fall88', 'Fall89', 'Fall9', 'Fall90', 'Fall92', 'Fall93', 'Fall94', 'Fall96', 'Fall97', 'Fall99']\n",
-      "   Participant  Trial  Video  Start  Stop  ToD\n",
-      "0            1      1      0    752   780    0\n",
-      "2            1      2      1    670   680    0\n",
-      "3            1      3      2    624   642    0\n",
-      "4            1      4      3    424   500    0\n",
-      "5            1      5      4    436   448    0\n"
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "create_pytorch_dataset() missing 1 required positional argument: 'stride'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-dcc9a5eecb08>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0mstride\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[0mTest_Dataset\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_dataloader\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mTrain_Dataset\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_dataloader\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcreate_pytorch_dataset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdset\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwindow_len\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstride\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: create_pytorch_dataset() missing 1 required positional argument: 'stride'"
      ]
     }
    ],
@@ -184,21 +79,22 @@
     "# dataset_creator on how to generate the H5PY file. \n",
     "\n",
     "# Name of the H5PY dataset \n",
-    "dset = \"Edits/Thermal\" #where the orginal data is stored \n",
-    "name = \"Thermal_Edit\" # name of the h5py file\n",
+    "dset = \"Edits/IP\" #where the orginal data is stored \n",
+    "name = \"IP_Edit\" # name of the h5py file\n",
     "path = \"H5Data\\Data_set-{}-imgdim64x64.h5\".format(name) # location of the h5py file\n",
     "# this will also window the data at a set size, and with the set stride \n",
     "\n",
     "window_len = 8\n",
     "stride = 1\n",
+    "fair_compairson = True\n",
     "\n",
-    "Test_Dataset, test_dataloader, Train_Dataset, train_dataloader = create_pytorch_dataset(name, dset, path, window_len, stride)\n",
+    "Test_Dataset, test_dataloader, Train_Dataset, train_dataloader = create_pytorch_dataset(name, dset, path, window_len,fair_compairson, stride)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,17 +158,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "cuda\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Now lets train our model\n",
     "\n",
@@ -320,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +283,7 @@
     "            frame_stats.append([frame_mean, frame_std, frame_labels])\n",
     "            window_stats.append([mean_window_error, std_window_error, window_labels])\n",
     "\n",
-    "             if j % 50 == 0:\n",
+    "            if j % 50 == 0:\n",
     "                animate(sample[0, :, :, :, :], output[0, :, :, :, :], frame_mean, dset, start_time)\n",
     "        \n",
     "    return(frame_stats, window_stats)\n",
@@ -406,226 +294,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "2021-01-07-16-11-38\n",
-      "Models\\Edits/ThermalGradientLoss2021-01-07-16-11-38\n",
-      "epoch [1/20], loss:0.0041\n",
-      "epoch [2/20], loss:0.0027\n",
-      "epoch [3/20], loss:0.0035\n",
-      "epoch [4/20], loss:0.0032\n",
-      "epoch [5/20], loss:0.0029\n",
-      "epoch [6/20], loss:0.0031\n",
-      "epoch [7/20], loss:0.0029\n",
-      "epoch [8/20], loss:0.0025\n",
-      "epoch [9/20], loss:0.0025\n",
-      "epoch [10/20], loss:0.0024\n",
-      "epoch [11/20], loss:0.0020\n",
-      "epoch [12/20], loss:0.0020\n",
-      "epoch [13/20], loss:0.0023\n",
-      "epoch [14/20], loss:0.0022\n",
-      "epoch [15/20], loss:0.0024\n",
-      "epoch [16/20], loss:0.0024\n",
-      "epoch [17/20], loss:0.0024\n",
-      "epoch [18/20], loss:0.0028\n",
-      "epoch [19/20], loss:0.0030\n",
-      "epoch [20/20], loss:0.0030\n",
-      "foward pass occuring\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n",
-      "48\n",
-      "49\n",
-      "50\n",
-      "51\n",
-      "52\n",
-      "53\n",
-      "54\n",
-      "55\n",
-      "56\n",
-      "57\n",
-      "58\n",
-      "59\n",
-      "60\n",
-      "61\n",
-      "62\n",
-      "63\n",
-      "64\n",
-      "65\n",
-      "66\n",
-      "67\n",
-      "68\n",
-      "69\n",
-      "70\n",
-      "71\n",
-      "72\n",
-      "73\n",
-      "74\n",
-      "75\n",
-      "76\n",
-      "77\n",
-      "78\n",
-      "79\n",
-      "80\n",
-      "81\n",
-      "82\n",
-      "83\n",
-      "84\n",
-      "85\n",
-      "86\n",
-      "87\n",
-      "88\n",
-      "89\n",
-      "90\n",
-      "91\n",
-      "92\n",
-      "93\n",
-      "94\n",
-      "95\n",
-      "96\n",
-      "97\n",
-      "98\n",
-      "99\n",
-      "100\n",
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "105\n",
-      "106\n",
-      "107\n",
-      "108\n",
-      "109\n",
-      "110\n",
-      "111\n",
-      "112\n",
-      "113\n",
-      "114\n",
-      "115\n",
-      "116\n",
-      "117\n",
-      "118\n",
-      "119\n",
-      "120\n",
-      "121\n",
-      "122\n",
-      "123\n",
-      "124\n",
-      "125\n",
-      "126\n",
-      "127\n",
-      "128\n",
-      "129\n",
-      "130\n",
-      "131\n",
-      "132\n",
-      "133\n",
-      "134\n",
-      "135\n",
-      "136\n",
-      "137\n",
-      "138\n",
-      "139\n",
-      "140\n",
-      "141\n",
-      "142\n",
-      "143\n",
-      "144\n",
-      "145\n",
-      "146\n",
-      "147\n",
-      "148\n",
-      "149\n",
-      "150\n",
-      "151\n",
-      "152\n",
-      "153\n",
-      "154\n",
-      "155\n",
-      "156\n",
-      "157\n",
-      "158\n",
-      "159\n",
-      "160\n",
-      "161\n",
-      "162\n",
-      "163\n",
-      "164\n",
-      "165\n",
-      "166\n",
-      "167\n",
-      "168\n",
-      "169\n",
-      "170\n",
-      "171\n",
-      "172\n",
-      "173\n",
-      "174\n",
-      "175\n",
-      "176\n",
-      "177\n",
-      "178\n",
-      "179\n",
-      "180\n",
-      "181\n",
-      "182\n",
-      "183\n",
-      "184\n",
-      "185\n",
-      "186\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -637,9 +308,9 @@
     "    + 'GradientLoss'\n",
     "    + start_time\n",
     ")\n",
-    "filepath = 'Models\\Edits\\IP2020-12-03-12-40-18'\n",
+    "#filepath = 'Models\\Edits\\IP2020-12-03-12-40-18'\n",
     "print(filepath)\n",
-    "#train_model(filepath) \n",
+    "train_model(filepath) \n",
     "import functions\n",
     "from functions import animate\n",
     "\n",
@@ -649,20 +320,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "(187, 5, 8)\n",
-      "saving\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import functions\n",
     "from functions import get_total_performance_metrics\n",
